--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 </head>
 <body>
     <header>
-        <h1>Food Delivery Website</h1>
+        <h1>Sri Eshwar Canteen</h1>
     </header>
     <div class="container">
         <h2>Our Menu</h2>
